2019-1/221/users/4114/executions/1653_1054.log
== SUBMITION (2019-04-11 08:41:15) 
-- CODE:
x = float(input("Pronto x: "))
y = float(input("Pronto y: "))
if (2*x + y == 3):
	print("ponto pertence a reta")
else:
	m = ("ponto nao pertence a reta")
	print(m.lower(()
-- EXECUTION TIME:
0.189768
-- ERROR:
  File "/home/codebench/codes/1653/1054/main.py", line 8
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 08:42:01) 
-- CODE:
x = float(input("Pronto x: "))
y = float(input("Pronto y: "))
if (2*x + y == 3):
	print("ponto pertence a reta")
else:
	m = ("ponto nao pertence a reta")
	print(m.lower())
-- EXECUTION TIME:
0.139732
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
